Implement PUT & Delete of albums plus Gin middleware
